# gst-sync-server

./: CMakeLists.txt
